<resources>
    <string name="app_name">TranVanDanWeek2Lab1</string>
    <string name="user_name">User Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="email_id">Email Id</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
</resources>