<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText_username"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:background="@color/grey"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_username2"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone_no"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText_username2"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:background="@color/grey"
            android:hint="@string/phone_no"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_username4"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email_id"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText_username4"
            android:layout_width="0px"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:background="@color/grey"
            android:hint="@string/email_id"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>